[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/aodanTHeme.tres" type="Theme" id=1]
[ext_resource path="res://UI/UI.gd" type="Script" id=2]
[ext_resource path="res://UI/icons/blue_key.png" type="Texture" id=3]
[ext_resource path="res://UI/icons/green_key.png" type="Texture" id=4]
[ext_resource path="res://UI/icons/red_key.png" type="Texture" id=5]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_menu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -300.0
margin_right = 125.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="pause_menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.0
margin_top = 40.0
margin_right = 140.0
margin_bottom = 87.0
text = "* Pause Menu *"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="keys" type="Label" parent="pause_menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.0
margin_top = 110.739
margin_right = 140.0
margin_bottom = 157.739
text = "Keys"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="key_items" type="HBoxContainer" parent="pause_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -123.0
margin_right = 202.0
margin_bottom = 5.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="pause_menu/key_items"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="pause_menu/key_items"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture = ExtResource( 4 )
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="pause_menu/key_items"]
margin_left = 264.0
margin_right = 392.0
margin_bottom = 128.0
texture = ExtResource( 5 )
stretch_mode = 1

[node name="parts" type="Label" parent="pause_menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.0
margin_top = 347.374
margin_right = 140.0
margin_bottom = 394.374
text = "Parts"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="part_items" type="HBoxContainer" parent="pause_menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -196.0
margin_top = -193.103
margin_right = 196.0
margin_bottom = -65.1028
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="pause_menu/part_items"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="pause_menu/part_items"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture = ExtResource( 4 )
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="pause_menu/part_items"]
margin_left = 264.0
margin_right = 392.0
margin_bottom = 128.0
texture = ExtResource( 5 )
stretch_mode = 1

[node name="game_over" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
